2008-09-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mail/pam_mail.c (report_mail): Fix logic of
	"quiet" option (Patch from Andreas Henriksson <andreas@fatal.se>)

	* modules/pam_mail/pam_mail.8.xml: Fix typo.

2008-09-23  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_limits/limits.conf.5.xml: Comment that rss limit is
	ignored.

2008-09-19  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_cracklib/pam_cracklib.8.xml: Fix description
	of the palindrome test. Document new options maxrepeat and
	reject_username.
	* modules/pam_cracklib/pam_cracklib.c(_pam_parse): Parse
	the maxrepeat and reject_username options.
	(password_check): Call the new tests usercheck() and
	consecutive().
	(_pam_unix_approve_pass): Pass user name to the password_check().

2008-09-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.8.xml: Fix typo.

	* modules/pam_unix/pam_unix.8.xml: Fix typo.

2008-09-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_exec/pam_exec.c: Expose authtok if requested,
	provide environment variable containing service type.
	* modules/pam_exec/pam_exec.8.xml: Document new option.

2008-08-29  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c(set_loginuid): Uids
	are unsigned.

2008-08-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* Makefile.am (M4_FILES): Adjust list.

	* modules/pam_access/pam_access.8.xml: Fix module service
	vs. module type.
	* modules/pam_cracklib/pam_cracklib.8.xml: Likewise.
	* modules/pam_debug/pam_debug.8.xml: Likewise.
	* modules/pam_deny/pam_deny.8.xml: Likewise.
	* modules/pam_echo/pam_echo.8.xml: Likewise.
	* modules/pam_env/pam_env.8.xml: Likewise.
	* modules/pam_exec/pam_exec.8.xml: Likewise.
	* modules/pam_faildelay/pam_faildelay.8.xml: Likewise.
	* modules/pam_filter/pam_filter.8.xml: Likewise.
	* modules/pam_ftp/pam_ftp.8.xml: Likewise.
	* modules/pam_group/pam_group.8.xml: Likewise.
	* modules/pam_issue/pam_issue.8.xml: Likewise.
	* modules/pam_keyinit/pam_keyinit.8.xml: Likewise.